force-app/force-app/main/default/objects/Opportunity_Contributor__c/fields/Contribution_Details__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Details__c</fullName>
    <inlineHelpText>The type of contribution</inlineHelpText>
    <label>Contribution Details</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>