force-app/force-app/main/default/objects/Opportunity_Contributor__c/fields/Email_contributor__c.field-meta.xml
<CustomField>
    <fullName>Email_contributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to email the contributor that they have been added to an opportunity contributor record.</description>
    <inlineHelpText>Do you want to let the contributor know?</inlineHelpText>
    <label>Email contributor</label>
    <type>Checkbox</type>
</CustomField>